Style: added more margin to btn to avoid spacing issues on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ button{
   align-items: center;
   text-align: center;
   color: #FFF;
+  margin-top: 1rem;
 }
 
 button:hover{
